--- a/pom.xml
+++ b/pom.xml
@@ -51,7 +51,15 @@
         <plugin>
           <artifactId>maven-jar-plugin</artifactId>
           <version>3.0.2</version>
-        </plugin>
+                <configuration>
+                    <archive>
+          <!-- Création du Manifest pour la définition de la classe Main -->
+                        <manifest>
+                            <mainClass>org.exa.app.App</mainClass>
+                        </manifest>
+                    </archive>
+                </configuration>
+	 </plugin>
         <plugin>
           <artifactId>maven-install-plugin</artifactId>
           <version>2.5.2</version>
