--- a/pom.xml
+++ b/pom.xml
@@ -24,16 +24,22 @@
     </repository>
   </repositories>
 
-  <distributionManagement>
-    <snapshotRepository>
-      <id>nexus-snapshots</id>
-      <url>http://localhost:8081/repository/maven-snapshots/</url>
-    </snapshotRepository>
+<distributionManagement>
+
     <repository>
-      <id>nexus-releases</id>
-      <url>http://localhost:8081/repository/maven-releases/</url>
+        <id>releases</id>
+        <name>Releases</name>
+        <url>http://localHost:8080/repository/maven-releases/</url>
     </repository>
-  </distributionManagement>
+
+    <snapshotRepository>
+        <id>snapshots</id>
+        <name>Snapshots</name>
+	<url>http://localHost:8080/repository/maven-snapshots/</url>
+    </snapshotRepository>
+</distributionManagement>
+  
+
 
   <dependencies>
     <dependency>
