--- a/pom.xml
+++ b/pom.xml
@@ -24,20 +24,16 @@
     </repository>
   </repositories>
 
-<distributionManagement>
-
-    <repository>
-        <id>releases</id>
-        <name>Releases</name>
-        <url>http://localHost:8080/repository/maven-releases/</url>
-    </repository>
-
+  <distributionManagement>
     <snapshotRepository>
-        <id>snapshots</id>
-        <name>Snapshots</name>
-	<url>http://localHost:8080/repository/maven-snapshots/</url>
+      <id>nexus-snapshots</id>
+      <url>http://localhost:8081/repository/maven-snapshots/</url>
     </snapshotRepository>
-</distributionManagement>
+    <repository>
+      <id>nexus-releases</id>
+      <url>http://localhost:8081/repository/maven-releases/</url>
+    </repository>
+  </distributionManagement>
   
 
 
