--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,8 @@
       <url>http://localhost:8081/repository/maven-group/</url>
     </repository>
   </repositories>
- <!-- ajouter commentaire-->
+  <!-- ajouter commentaire-->
+  <!-- ajouter commentaire 2-->
   <distributionManagement>
     <snapshotRepository>
       <id>nexus-snapshots</id>
